--- a/mystyle.css
+++ b/mystyle.css
@@ -75,6 +75,22 @@ video{
     padding: 15px;
 
 }
+time{
+    color: brown;
+}
+.Ami{
+    text-align: center;
+    background-color: black;
+    padding: 15px;
+
+}
+.Future{
+    text-align: center;
+    background-color: rgb(239, 237, 237);
+    padding: 15px;
+
+
+}
     
     
 
